Primeira versão do sistema

--- a/Livraria/frm_main.resx
+++ b/Livraria/frm_main.resx
@@ -121,6 +121,139 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAL8AAAC8CAYAAAApfn+oAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        xAAADsQBlSsOGwAAHdhJREFUeF7tnYl3FFW+x9//8N47M+85Z9wVAWVXBB2FccVlZnQcZdEBFQmETVkE
+        3J4OLuMoCNmBIFsCSEiAEFmy7ztZutOddNLZE4gJSxg0IITfu9/bXSFLhXS6lq7uvt9zvqeTXqru8qlb
+        v3vr1q3/ICEhP5WAX8hvJeAX8lsJ+IX8VgJ+Ib+VgF/IbyXgF/JbCfiF/FYCfo3UdeUatV/ootrTF8na
+        eIFKa85SfmU7ZVe0UYbpDKWXn+bG33gPn+E7+G5t60Vq7+zi2xDSTgJ+BbrW3U1NP12iEgZt4qkW2p9W
+        S1t/rKLNhywUxBxyxEph8ZUUftThCDihirb0M97DZ9L38Bv8FtvAtrBNbDuJ7QP7wj6xbyFlEvAPQ+cu
+        XqZT1R0Un9tI2wB5nIVC460c3C3s/23HbLT9uI2+P15N359weDv7G5b+H8oDvs//t/FtYx/YF/aJfSMN
+        SAvShLQJDU8C/pvoytVuMtefpyMMMAAXfNgBOlpiDrkEpwSqDub7ch4cSAPSgjQhbUgj0lrB0oy0C91c
+        Av5+6rpylYpsHbQnyc7DDoQhvWEfTiuul6U0SQcD0oy070m287wgT0IDJeB3ylR3nqJT7DzGRksaKYUw
+        /UDzFiPtyAPygjxFp9rJzPIodEN+DT/i5OOFzTx+RmuJuPr7E94L/OB29BmQRxwIyPO5f4s+gl/CX3v6
+        3zwkkEZSvLmFH66l0Ah5j2JlgLLwV/kV/JWNF3jFhx6xOlt5eUD8xSgDDKluPVbFy8bf5Bfw25o7+TAh
+        oI/0o1beVaNMUDZoGGxNnc5S8335NPwtHZfoe2fFCuiHtnQQoI/Q0vGzsxR9Vz4J/+Vfr1FMRh0f7sOI
+        h1xFCw9ulBnKLiajnq6wsvRV+Rz8ORVtfPQGp3C5ihV23bxjzMoSZeqL8hn4Oy5c5pWF4Tx/Gr3R2ihL
+        6UJfR2eXs7R9Qz4Bf2ppK2+hRIijnVG2KGOUta/Iq+H/uesqrxRHay9facLqGWWMskaZo+y9XV4Lv6nu
+        HG2KqxCtvQeMMkfZow68WV4J/5G8Rj6LUcT2njPKHnUQz+rCW+VV8Hd3X+eFjps/5CpEWH9HJLCQ84SN
+        uq9fd9aS98hr4D978TJraSxiWoIBjTpB3aCOvEleAb+99SKPMUWYY1yjblBHuGfZW2R4+EvtZ/kQmwDf
+        +HYcABZeZ94gQ8OPK4u4zC7A9x6jrlBnORbjXxU2LPzpZWd4HClXwMLGN+ouvfyMszaNKUPCn1Z2mg+j
+        yRWqsPcYdZjO6tKoMhz8WWa0+AJ8XzHqMstszBDIUPAX2zp4vChXiMLea9RpcXWHs5aNI8PAj7utMKoj
+        V3jC3m/UbTWrYyPJEPD/dL5LjOP7uB3DoBV8/VKjyOPwX/m1m48MCPB936jj4ENWXudGkMfh3/ajY00Z
+        ucIS9j2jrreyOjeCPAr/wcw6vkqxXCEJ+65R57GZ9U4KPCePwV9Y1c7XjJErHGHfN+q+qMqzI0AegR/L
+        BG6KRQdXvmCEfd+oe3SAPbm0ukfg57fCiQ6u3xsMgAVPSXf4E/KbRJwv3GOwcJQx4QnpCn9j2yW+QKpc
+        IQj7r3EFGI9a0lu6wh8WL+67FR5oMIFlEvWWbvCfLG4R994KD2qwkcgY0VO6wI8evRHvxkJ6pDTtEB5Q
+        Pnoa9YC7wPR8aIYu8O9KrDHU+joo6F0n7LQvsZFik09TVGI97Tpp93vvOFEjW156GVd/wYpe0hx+PFTZ
+        aBezDiS10DdHC2nGzlC6I3Q13RK8nH4X/K5f+zdBS+jJ7zfxBkGuzPQyWNHrQRmawx8eb6yFYw8mt9KL
+        uyI48PeGrWP+gO4KXUd3hq71a98asoqe3xnmcfjBCpjRQ5rCjykMuIghl0lPGCHOY9u/5a39yPCP6H82
+        r6SHI9fT/JhtFBi3gxbFfe+XDmQOiI2kwB/iac/JOtmy09NgpsjW7qRIO2kKf4hBpipjRbG9iQ20YP9B
+        ui1kJY0I+5DuDFlLCQU51FbTQLWV1WT3YzdX2yg2tZ52n/A8+DCYwTR3raUZ/HnWn/gzYOUy5wkD/t+H
+        rGAt/od0S9AqMpstZLNWUZnJTOXmCs1tqrC4bLnfa2VzhZmS8qy05Uf5cvOU0frnW7Vt/TWDHzcuGyXW
+        x6l8dewJHu7cHrKG1h+P4a29HAxaOTU9k9Izs4Y0vqfXAVnO9lNlNfNRFqNNMnS0/tpe+NIE/lPVHYaK
+        9dHqvxa1i+4JW0u/2bSCSspNrMXTt4WVa+EHM76vxwFgMpupoNRC4Qny5eZpg6GSau1Wf9MEfiTaKK0+
+        jBEMjPBgdOe/vnuPmm11sjDAOCgqrNYBNlussqAOZbl9DGW9Wn6EPMks5Nl6TL7cPG0wBJa0kurwY1FZ
+        x+Ms5TPkCQP+P+3awuH/TwZ/k612EBgslJNfSCeT0ygpNb3HiSnplJKWQWksJEFY4qrxm+KSUtl9GcEV
+        DP4TOZWGhR8GS2BKC6kO/77UWsPdk+sq/DZbJX22PYHGzg+mhwPDevzA20G0NTaVampssmeFmxnb1S2G
+        H6Y5/LnGhh8sgSktpCr8l7qu8vkZcpnwpIcD/9e7jtFjy8LpmVVbe/zokjDafiiVKiutHOThWm5frlgu
+        jFLi/tv3hpYfBlNaPANMVfgzTGcMeaOKI+Z3wI+Y3zX4t/W4N/z4nlpw38yANTs3n4dPaRlZio0QrH9a
+        EfOn5Bs35pcMpjJN6q/5qSr8oQadr4/RnpnO0Z7fblpBhWVlrNUb2BK6Aj8AQudXMn6nxQGAbfZvuZVY
+        Gt3qnVaM9hSWVhh2tEcymMK9IGpLNfibOy4ZrqMrGeP8a2OT6PbQVXRHyBr6OGEf1VfV9EAg2RX4ARJa
+        UalDW3RKuw4tQFXb/fdRaTVzuIy+mAAmvIExNaUa/CeKWgz9yP/9SU18agPm9Px28woqLi+nGqutDxCu
+        hj29W1Tpt95qHvoUWCnC4K0/2AJjako1+HFkGjHkgZGu6JP1tPTAEbrVOcXhd0GraW9WCp21N1FdZTX3
+        mdo6+m5Poiz80fGZ1Gqv7fmuL7mlxkZH0hoMM7dHzqhDMKamVIG/teNnw83ZH2B2Wseszqd3BLMzwCp+
+        BsAcnxFhH9HMfaE0a38YzYkJoz9/u4WeevcG+PBTy7fRyyERNPtAGM3a54NmeX9tfzDN33eQolgjIVt+
+        BjDCarCmllSBH09S0XKUxxGTKrd0AMyO3k3/G7yMd4BHhH1Ad4euc8zpD19Dkz//mp59L5KeWbmt53XG
+        e9tp/Ndf8M/xPV/0bSGre+bzy5UdLFc3ehqMpZerN+qjCvyYMqzVbYoo9D1pzfRD7lnVnFDwC+3MbqW5
+        Rw7T5L2baNTuL2jUni9oZPTnNOWbTTRj5U56+pM9NDFiIz37YRTNWLGTHty8gUZGfc6/54u+d9dn9HJs
+        NMUXXJIts/3Z7RSdcZp2pzTS9ydrPHIwgLHt7FUtKYa/68o1TZ+msietiZZ88A09MvVRmjbtSdX8xPSn
+        acYTz9OfnvwzPffEC/zvGXjvrU9o+oKv6I/Tp9OzTz9H06Y/QU8sC6YZs95lnz/j+J6P+uk/zpAtq2nT
+        n6Jnn3+J5ry9nD78dg8/CPZmnuEHgVydaWfHkx4vM+bUkGL4cY8ubjuTT6xyR6W30IIVn9EDI++liePH
+        aeJJTk8cN4YmPzKNJj0wsuc97jGjafLUx9nnY/u+72OWKxvuceNowtgxNO6B0fTAfffQqHvuoHmL1vAD
+        YHdKg65nAbBW2aTOPb6K4cd6PFoOcQL+gJXraez9o+ihSZM094MTJwzrfX/ygxMn0oPO17GjR7IGaQR9
+        F53JzgStuh0AWxhrYE4NKYYfmdZy0VnAPy9wLd1+y3/TnbfdRncIe8C30j133kmjR46kCewsIB0MkyaM
+        p3tuu4W+3JrA6wlhiVwdqmmwhj6mGlIEf3f3dR6DITFyCVXHrHPFXnedtJHFUkFlZguVmYR1MyvvUhPu
+        RMugoKBgmv7443Tv3Xfz1l86G9x7++8o/FAJ7UzS/joBWANz3devOyl0X4rgb27/mc/nkUukuq6hyBN2
+        ikmrJluVhcwWYX1tJUtlFdlq7NTWcZbCwyP4GUE6ANAvQDgUk39Bpu7UN5gDe0qlCH48N1fPm9QxASur
+        iFVGhfoTyYRdd11jEyUcO87DIekAuH/E3bT68y20J7VJtu7UNJgDe0qlCP7jhc26zufB5Cuc9nDTtdwk
+        LWF9jLJvbG6hTz/9lPcDpNZ/6sNTeeuvdecXzIE9pVIE/55ku+5rcGICVu4pC5+OK1cxRrM0m9Idy23P
+        SG453UYj7rmnp/W/785bKeJwGe1IrJWtO7UM5sCeUimCP9QDSxFuO1ZNhzMqqcJifDgAMJ9L32v+v6vG
+        74x+ANQ2NNKihQtp7P33c/hxLeaDf+10XAWWqTu1DObCVFjS0G34r17r5suOyyVOS0ey0GfnSRufh15m
+        kq8UoxgA5+YXUGJyKiWlpLlsfD+voFB2m0Zytb2WNmzY0BP6YOx/8Zp/UlQahj3l608tgz0wqERuw//T
+        hS6PzORE3B/+YzWHv9zg8MOmir7z/1213LaM5qoaO4WFhdOo++7rgT9g5T+cY/7y9aeWwV57Z5eTRvfk
+        NvzVLRf5qUcuYVo7jMX9jrDH+KGPUvfuA2hpuX0PZcAfGhp2A/77R/Gr8XrAD/bAoBK5DX+Z/ZzHVmVD
+        p9dsQQX4NvyAEmcOuT6Bmpb21X//Q9mT8IM9MKhEbsOfZW7z2DO2/AV+GLH/cPsMwzG2XXSqRHbfQ9mT
+        8IO97Io2J43uyW34k0+1emyZEkfYgwrwffhhudZaTcvt0xV7En6wl1zS6qTRPbkNPx4m7Ykb1jHPB1d6
+        rV4w1OnrHtDh5fDr0+EFe2BQidyGPzarnrZ5An5c5T2ubKgzr6CI8gu1c2HxKdn9+pox12dzUBCNluAf
+        PZIWrfpCF/jBXlxWg5NG9+Q2/D+ke2ZNTlzkikmrIoubLT+GEXPy8vn4uxbOySvgB4DcvrW23kOlNXX1
+        9P77a+iB0aM5/GNGjaBV68N1md8D9sCgErkNf7SHFqTFE0RSC1isqmByW29ItLDcPrU2Oq1Y3hAHNl4L
+        Cotlv6eWMTrU1nGOJj+IeT3jOfyj7r6DNkZl6DK1GexFpyqb4uA2/FEemNfDL3CxeL/ST8b4h+NTpWXs
+        jFNMBUUOuzuC46ptNbW0d+8+Prcf4E+aMIGHPQfyzsnWndoGe9EK5/e4D3+S/g+WRqt/PKeSry5cJlMh
+        wvrYWmXjUxvQ0QX0Urz/1pIPdLulEexFJXkI/uiUWt3gR2FiTo/U0UWrL12ZFNbHgN5sreRz+UvLTfx2
+        xvFjx3LwcX8zQh50dHfotKIDb/kZg0rkNvx6PYQCwGPdnn05Z6mhuZWaW1upsUVYLzc53dr2Ew+l1q1b
+        R3fdfnufe3lH3Pl7vqRJFKsnuTrUwmBP6UMr3IY/JrNOF/ixbs/itf+iR6dM4WvpTJ8mrLenMY8bM5Yv
+        IICRnd737468+3aau+h9OpB/XpdwRzLYO8gYVCK34T+c06jLRS6cSqV1e9DaCOtvrNsjxfa979vFjesB
+        K9bTwYJOXcGHwR4YVCK34Vd1vR4U3CAG/HzdntGj6KGJ7DQr7AFP5NBjqZLxY+7n8f2Uh6fQht2ptD+n
+        Xbbebmo5BoZpsJeocP0et+FXbXFaVhhbss7Qluw2We8ovkRz1nxJvx9xF9019gFhD/nucWNo3GPT6S8L
+        V9P/RaXT3orrFMlCHbk6u6lZXatxAIA9MKhEbsNfVKXGyg022prRStmzFlLOawsoZ2bAQOOzOYGU88YS
+        yn1jqbA7fn0x5c4OVOSiue9R2Ttr6dS8FZTP/s/+2/zB/ep8+bpkdYy6Rp0rXeAK7IFBJXIbfkvDBRXm
+        87NWP/MMBzybFU72bPYq60WOA0B42M5+6U3K+ftSylv6AeUtWee2cxevpdzANUMb32Md4KwXXueg96lH
+        HADsPdS5UvjBHhhUIrfhb26/pMKCVU74Gdy8oFBZwuqYlWnWK/OpMCSSzD+dIVN9nX5uauTXBrL+Mo+y
+        ULdSmlgdo67VgN+xcJWyZ3S5Df/FX36loEMCfiM787k5ZKp1PHa1/0UrLV3ObGqop7wPv6KsV1moI6VJ
+        RfjBHhhUIrfhh/g6nYo6LwJ+LZ353Gwy2Qc+dVIPm2rtlPfxPxn879xIk0rwgznAr1SK4MclZmUrNAv4
+        tbTH4f9IG/jBHKxUiuBXfkOLgF9L+yr8atzIAimCP9N0RuFYv4BfS/sq/GAO7CmVIvirmjoVrt0j4NfS
+        vgo/mAN7SqUIfvS2gw8rGfER8GtpX4UfzCkd6YEUwQ/hwcDuj/gI+LW0L8IP1jDGr4YUw38wk3V6j7kb
+        9wv4tbQvwg/WwJwaUgx/QWW7gjk+An4t7Yvwg7WCqnYnfcqkGP62c78oWK1ZwK+lfRF+sNZ2/hcnfcqk
+        GH4ohHVA3Iv7Bfxa2tfgB2OAXy2pAv+hnAY3b2wR8GtpX4PfcfeW8otbklSBv6L+vJvTmwX8WtrX4Adj
+        YE0tqQL/r3hEkVuT3AT8WtqX4AdbYEzpo4h6SxX4oegUuxurOQj4tbQvwQ+29ipcnrC/VIO/tOasG6GP
+        gF9L+xL8YKvUftZJmzpSDf5r3ddpU9xwQx8Bv5b2FfjBFNjqZoypKdXghw5mDPdqr4BfS3P4GYRycGpt
+        Dv8nX6sCP6Ywq3VVt7dUhb+mpZM/mFouA/IW8GvpzBfecMBYVUXlWDpdR5tPt1LO8g8p67WAG2lyE34w
+        VdOqfBZnf6kKP4SLEK6HPoPBz/4XVmyAl7N4LZUVl1BZuYnKysp1MQ64oq27KfMv8/iN9D1pcgN+sKTm
+        ha3eUh3+LPOZYTyl0QF//qvzqfDVt6lo5gIqniWspov+9jYVvjCHCp+frauLXpo7MD2vvcNeA2hH7lna
+        k1zLXDekt/5o40xpIdXhxzjsptgK/uA4eeAdR/MO9orM7ctto7h/7aHwNZvp66X/pH8EfkmfBn4l7JNG
+        3X5JSyNSaXnwiSG9eNMx+jyqiFTu5/ZIdfih+LybL2IbnVrP13FfxjL4zKptNGV5BP1hZSQ9tmo7Pb5a
+        2KfN6nj6u+Eu+aGATayzW+akSn1pAn/npV9pc5ylD/Bo7Xcl2mkvAz9gQzxNXbSZpi8Pp6dWbOUHwNPC
+        /uOVW13ylEVBlG9RthLzzaQJ/FBMRl3Pyg4APzqlnjbHltHjy0I59MgcoBcWlvPTK1lEwODPq/BC+M92
+        Xu6Z77M3tYE+3ZnNMrOZnroJ9DggnmRnAmHhJ1dsYWHPZso1qzeLs780gx/ChYldSbX0j925PMyRa+2R
+        0T8sZfHdwhB6jL0+9/52enGtsL/7udVbaRqLEPIsXgr/z13X6JsfSmlqYNAA8PH/I0vC+Gvw/kQqKCmn
+        hrpqaqyroSZhv3atDeP61xwQaShN4YeefG8LP4X1Bh+hz6SAYPou+gQ119eQraqSzLgyaNZ3QVVh47nc
+        VE7FGrb2vaUp/DuPF7I4P7gP+GjpH1oYTMnZRVRnt/XMBREWNpnNlJZXRiosyeOSNIUfHZbeHVyAP3FB
+        EJ3ILKBqW6XjSJcpBGH/dFl5GRXb1FmZwRVpBv+x/EqavDDoBvjMjy8Lp0+3xVN9bbUAX7ifzZReUOGk
+        Rx9pBn/gxjjeW+/d6k9eFMLBl8+8b9lssWpqk7OP5CsuLi2lCxd/dtKjjzSDH61+75Bn2vII+jDiMNmr
+        q2Qz70suLD5FP8TE0cG4I5o4JvYwxScc4weB3P69zVJnV29pAv/Fn7tozJsbe8CHH1kcRgcTc8hq9Y0K
+        G8oV1kpN7SvgwyVl5dTU3OykRz9pAr+lvo13dnvD/+DCYCopN5G5Qr4AhP3Xp0rL6Px5ZU9WdEeawJ9X
+        0cDnZWB+hgT/pIAgsuGOIpnMC/u3i0tK6fKVK0569JNG8DcOhH+BgF9Y3oWnSpzk6CtDwi91gLzNcnkR
+        HtoYIPCEDAe/BJGVfVfWdXXDc22t/HZUdu+0Cw/PAv5eLmKnwb37Y+jAwbi+PhJPUWs+paiPP3fNHzF/
+        8iUdiD9KB2L6bUtF791/QICvwAL+fh4wvFdZSdbmZsqZMZtyX13gml+ZT7mvLybr6ZaB21PZcnkQds0C
+        fhdsqq+nzBf/7lgOwwVnzVxIWXOXkampgT8SX26bwp63gN8F94G/Z42fwZ01S8DvDfap0Z5cuXF+Bn+1
+        gF9Yxhjn//XqVSc9+kkT+Mvtp+mhgBszOjn8AcFkYhk1KbjCK+C/uTHZTa4/YmQj3bjC29l50UmPftIE
+        /vYLl2jcW9/1gX/q4lBKSMsni9X92YgC/sEN8HPy8vnEt7jDR73A8dw4ADC3p6W11UmPftIEfmjC/E0s
+        7LkxqxNz+b/ckUDVNvdDHwG/b1kaHsYrJurpLc3gn/vlfpr+bkQP/JjejAOgtcH9JbOVwI8ClrPcfoT1
+        NeoB13au6hz3awb/vuQSmhoYwu/gAvx4fXRJGIX+kEQ11VVugTds+GcupOx5y246zi+3H2H9jdCnoanJ
+        SY8+0gx+aNzbG/uEPvgbU5tPlZncmtc/XPixJHbmG0voh+MnKebgIYqJ7ev9Bw7yMWa5fQnra6n111Oa
+        wv9VdCo9yjq6EvwwFqnCXV1YqqSqang3sbsT9oiW33tcWm4ie22dkx7tpSn8EIY8pcVoJT/x3hZ+Z9eR
+        lDy+bo/FeRYY6kAQHV7fd1FJqW7DnprDj1V2x8zb0Ad+GB1gLFE474toOpqWR4111dRQW837A4O5lrXg
+        w4U/Z95yqm1vld2esDFdadHnfl7N4YfCDufShLf7jvvD6AT/8d0tNCUwlC9d+Pr6KFr2Xcygfic0nopf
+        ectl+HNmL6T015fQ22EJtGyj/DaFjeelGw/QEmasAGKu0+apLJAu8EMbD2TQ2LccHeDe0x56DgT2PsIh
+        DI8O5kkrt5PpNTzdzzX4c9lBkjJnCY1fsUN2e8LGNfqFE+Z/R9km9Z/CKEk3+KGjuRa6f+63NJ1lTGr5
+        +x8Egxnfnbpmx7DhT2XwT35/F9tG336HsLGNBhLzwzBJUivpCj90qesKzV4fTeNZGIRFraSh0N5DonIW
+        8PuXfRJ+SZb6Nlq66RA/CDAihCHRx5eF0bRl4YN64opIt+CfuGoHC6kihIdhPD1Hrg70tE+FPYMpv6KB
+        IhMK6OPtJ2hFSDytYB1bOQdGJlHRX98cVocX8P/p66P0xhcxwi54zucH6K8f76OADXG0MvSobD3o5YUb
+        YqnCFzq8ail1xmzK6gd/xivzKfW5OZT56oI+72fNDKD8t96lmLJOijxWwx99imeDCQ80ymYbK6P9aQ3U
+        3qnTGuEellfDj9eUZ2eRaf1G/lnB4nWU9uIb7MxwA/7cecv4Z/bWi/zZvyGHraySXX/0va8bZYEyQdnU
+        sjLyJ3kt/JmvBVDyU69Sa2K68xOH7Dv3U9KTf3Nc3WXw58x1wC+poe3fFJVsp6BDFv6sYDww72YPzPY1
+        I6/IM/KOMkBZoEz8UV4Jf/pLbzL4F9CV853Od/vqYnUtpT4/hzJefmsA/JI6Orv4w7I3xVVQxNFKimRA
+        yMHiS0YekVfkOT63kZeBP8vr4D/+0Awq/+xb5383V/7C1fxAGUpFVe3s9F9FwYcttCXBcTYALN58RpDS
+        jrwgT8gb8oi8CjnkdfA3xhx1/uWa6vbGOf8aWu0Xuii1tJVCj1gphBnQeOMZAWlG2pEH5AV5Qt6E+srr
+        4NdLp8/9QunlZzhIiI3DWbgg9REA2Pbj8uDpaSkNUgyPNCKt+D+DpR15EBpcAn4X9Mvlq2SuP08/5jdR
+        BGtRAVhYfCVvXTFaIh0QEpBqHhiO7fXevo3vE/tGGpAWpOnHgiaeRqRVyDUJ+N1Q15VrVN3SSVnmNjqY
+        WcdBBIQYMkTri04l3kNrDFAjnQdIb/eGubfxXfwGv8U2sC1sE9vGPvAe9ol9Iw1Ii5B7EvCrpO7u69TR
+        eZkqmy5Qsa2Dkkta6WheE+1NtdPOk9W0lUGLlhpxeDCDGCDD+Bvv4TN8B9/dx36D36awbWBb2Ca2fe36
+        defehNSQgF/IbyXgF/JbCfiF/FYCfiG/lYBfyG8l4BfyWwn4hfxWAn4hv5WAX8hvJeAX8lsJ+IX8VgJ+
+        Ib+VgF/IbyXgF/JbCfiF/FYCfiG/lYBfyG8l4BfyUxH9Pwjb7K0JGQIFAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAAAAAAAEAIACpTQAAlgAAAICAAAABACAAKAgBAD9OAABgYAAAAQAgAKiUAABnVgEASEgAAAEA
